hack con box-shadow para mitigar bug de flicker en ui de telefono

--- a/src/components/Feedback/Busqueda/ResultadosBusqueda/ResultadosBusqueda.css
+++ b/src/components/Feedback/Busqueda/ResultadosBusqueda/ResultadosBusqueda.css
@@ -58,7 +58,7 @@
   filter: none;
   font-size: .8rem;
   position: relative;
-  border: .1rem solid var(--color-bordes);
+  border: 1px solid var(--color-bordes);
   color: var(--color-texto);
   background: var(--color-fondo);
 }
