--- a/src/components/Feedback/Respuestas/Chat/CelularWhatsapp/CelularWhatsapp.css
+++ b/src/components/Feedback/Respuestas/Chat/CelularWhatsapp/CelularWhatsapp.css
@@ -15,7 +15,7 @@
 
 .CelularWhatsapp__datos_extra {
   position: absolute;
-  color: rgba(255, 255, 255, .3);
+  color: rgba(255, 255, 255, .4);
   left: calc(50% - 1.5rem);
   z-index: 3;
   width: 3rem;
@@ -25,7 +25,7 @@
   font-size: .4rem;
   top: .5rem;
   letter-spacing: .05rem;
-  background: rgba(255, 255, 255, .05);
+  background: rgba(255, 255, 255, .04);
   font-weight: bold;
   box-shadow: 0 0 0 .1rem rgba(10, 10, 10, .15);
 }
@@ -47,6 +47,7 @@
   box-shadow:
     -.02rem -.02rem 0 .025rem var(--whatsapp-color-brillo-celular),
     .03rem .03rem 0 .025rem var(--whatsapp-color-brillo-2-celular),
+    0 .05rem .25rem .05rem var(--color-sombras),
     0 .25rem .75rem var(--color-sombras);
   padding: .3rem;
   border-radius: 1.5rem;
